tests/errors/nested_break_value_type_mismatch.dang
# Nested break expressions in a break value still target the enclosing call
pub yield(&block(): String!): String! {
  block()
}

pub result: String! = yield {
  break {
    break 42
  }
  "ok"
}
